test/e2e/setup/demo-only/podinfos-base/1-ingress-specific.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-namespace-prefix
spec:
  stripPrefix:
    prefixes:
      - /podinfos
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: podinfos-gateway
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`demo.configbutler.ai`) && PathPrefix(`/podinfos/`)
    kind: Rule
    middlewares:
    - name: ratelimit
    - name: podinfos-add-trailing-slash
    - name: strip-namespace-prefix
